<resources>
    <string name="app_name">Natural20</string>

    <string name="textview">Welcome to Natural20</string>
    <string name="action_settings">Settings</string>

    <string name="d20Button">D20</string>
    <string name="d12Button">D12</string>
    <string name="d10Button">D10</string>
    <string name="d8Button">D8</string>
    <string name="d6Button">D6</string>
    <string name="d4Button">D4</string>
    <string name="clearButton">CLEAR</string>
    <string name="charButton">CHARACTER</string>
    <string name="title_activity_char">CharActivity</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>

    <string name="hello_world">Hello world!</string>

</resources>
